examples/java/failing/adding_two_implements/Right.java
class SomeClass implements Bar {
        void doTheWork() {
        }
}
